# Spout

./: .gitignore  BUGS.md  DIAGNOSTICS.md  PROGRESS.md  README.md  TODO.md  build.zig  build.zig.zon  flake.nix  pyproject.toml  setup.py
.claude/: ralph-loop.local.md
.github/workflows/: ci.yaml  docs-check.yml  docs.yaml
.omc/: prd.json  progress.txt  project-memory.json
.omc/sessions/: 0c6c3260-e8cd-4c8b-9025-064d4159ef83.json  1daad1f4-0f8b-4fee-a209-04a000e3c120.json  3932551a-033d-4e14-b0ec-b273b5def37b.json  3d751bb9-ea20-4291-9b04-8add77d03cf4.json  46aec1c4-1a87-4133-86ec-c9a4a2413279.json  55ed0473-151e-4ea7-b53f-79aaa0546f4a.json  5db95da8-e9fc-4b6a-80f0-a708e97f7604.json  6072e105-ba36-4b78-9451-64259f7a5504.json  69d75dd5-c418-4408-9e16-83bff7da92be.json  (+12 more)
docs/: build.ts  package.json  server.ts
pdks/: gf180.json  ihp130.json  sky130.json
prompts/: PROMPT_DRC.md  PROMPT_LVS.md  PROMPT_PEX.md  PROMPT_PLACEMENT_ROUTER.md  progress_drc.txt  progress_lvs.txt  progress_pex.txt
python/: README.md  __init__.py  config.py  ffi.py  layout_spice.py  liberty.py  main.py  pipeline.py  tinytapeout.py  tools.py  train.py  visualizer.py
scripts/: benchmark.py  compare_drc.py  compare_lvs.py  compare_pex.py  compare_pex_values.py  debug_magic_drc.py  debug_magic_drc2.py  debug_magic_drc3.py  debug_pex.py  gds_to_lvs_spice.py
src/: lib.zig  python_ext.zig
tests/: conftest.py  e2e_tests.zig  size_runner.zig  test_drc_vs_magic.py  test_lvs_vs_netgen.py  test_ml_performance.py  test_pex_vs_magic.py  test_pipeline.py  test_python_refactor.py  test_runner.zig
(+271 files in other folders)
